Blender 2.77a crashes on Undo in some specific multi-level linked libraries cases #48412

Closed
opened 2016-05-12 10:37:06 +02:00 by Bernard Etiennot · 34 comments

System Information
system-info.txt

Blender Version
Broken: 2.77a abf6f08.

Short description of error
Blender unexpectedly close after CTRL-Z

Exact steps for others to reproduce the error
Opened up file created with a previous version of Blender.
Added PLANE / SCALED DOWN / ROTATED 90° along Y axis and saved it -> file uploaded herewith : Fixation_Poteau1.blend

Open attached file;
Move along Z and/or Y axis;
Undo last action by CTRL-Z cause Blender to unexpectedly close

Good Luck !

Blender is really an awesome piece of software !!!

Hope everything is correctly filled in as this is first time I report a "bug".

**System Information** [system-info.txt](https://archive.blender.org/developer/F310242/system-info.txt) **Blender Version** Broken: 2.77a abf6f08. **Short description of error** Blender unexpectedly close after CTRL-Z **Exact steps for others to reproduce the error** Opened up file created with a previous version of Blender. Added PLANE / SCALED DOWN / ROTATED 90° along Y axis and saved it -> file uploaded herewith : [Fixation_Poteau1.blend](https://archive.blender.org/developer/F310243/Fixation_Poteau1.blend) Open attached file; Move along Z and/or Y axis; Undo last action by CTRL-Z cause Blender to unexpectedly close Good Luck ! Blender is really an awesome piece of software !!! Hope everything is correctly filled in as this is first time I report a "bug".

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @beti001

Added subscriber: @beti001

#48682 was marked as duplicate of this issue

#48682 was marked as duplicate of this issue

#48401 was marked as duplicate of this issue

#48401 was marked as duplicate of this issue

Just re-tested with Blender 2.76b and problem don't appear.

Just re-tested with Blender 2.76b and problem don't appear.
Member

Added subscriber: @estefania

Added subscriber: @estefania

Added subscriber: @Sergey

Added subscriber: @Sergey

I can not reproduce the issue. Some questions

  • Does it happen with latest builds from builder.blender.org?
  • Try using opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and put it next to blender.exe. This will switch Blender to fully software OpenGL mode, which is slower but will eliminate possible interference with broken OpenGL drivers (which could be a case here).
I can not reproduce the issue. Some questions - Does it happen with latest builds from builder.blender.org? - Try using opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and put it next to blender.exe. This will switch Blender to fully software OpenGL mode, which is slower but will eliminate possible interference with broken OpenGL drivers (which could be a case here).

Hello Sergey,

Thanks for having a look at this :-)

  • Does it happen with latest builds from builder.blender.org?

I didn't give a try but will do for sure.
I had to de-install 2.77a as it caused problems (at least for me) and switched back to 2.76b.
I will test with last build anyway.

  • Try using opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and put it next to blender.exe. This will switch Blender to fully software OpenGL mode, which is slower but will eliminate possible interference with broken OpenGL drivers (which could be a case here).

Ok. What I also noticed is that I have quite regularly problems after "minimizing" the Blender windows : it doesn't re-open correctly and application needs to be closed down and restarted. Maybe an OpenGL issue indeed...

Hello Sergey, Thanks for having a look at this :-) > - Does it happen with latest builds from builder.blender.org? I didn't give a try but will do for sure. I had to de-install 2.77a as it caused problems (at least for me) and switched back to 2.76b. I will test with last build anyway. > - Try using opengl32.dll from ftp://ftp.blender.org/sergey/softwaregl/ and put it next to blender.exe. This will switch Blender to fully software OpenGL mode, which is slower but will eliminate possible interference with broken OpenGL drivers (which could be a case here). Ok. What I also noticed is that I have quite regularly problems after "minimizing" the Blender windows : it doesn't re-open correctly and application needs to be closed down and restarted. Maybe an OpenGL issue indeed...

Ok, gave a try with blender-2.77.0-git.29a17d5-AMD64

Problem still persists even when opengl32.dll in folder and running in software mode.

Tried to "debug" but I'm not too familiar with all the Windows debug tools (WER ?)

Is there a way I could help you out any further ?

Ok, gave a try with blender-2.77.0-git.29a17d5-AMD64 Problem still persists even when opengl32.dll in folder and running in software mode. Tried to "debug" but I'm not too familiar with all the Windows debug tools (WER ?) Is there a way I could help you out any further ?

Hello Sergey,

I'm very much afraid that at the time I opened up this thread, I actually didn't feed you with enough material to test :-{
I do have to apology as the file in question has multiple dependancies to other linked files and I mistankently overlooked a bit this point...

So, I have now made a .zip file hopefully containing all the material to simulate : Blender_Crash.zip

As in previous posts, with 2.77a (or even latest build), making any change to the file and un-doing it (CTRL-Z or via "history") cause Blender to unexpectedly close. This phenomenon do not appear with 2.76b.
This has also apparently nothing to do with an OpenGL issue.

Thanks a lot for your help and support,

Bernard

Hello Sergey, I'm very much afraid that at the time I opened up this thread, I actually didn't feed you with enough material to test :-{ I do have to apology as the file in question has multiple dependancies to other linked files and I mistankently overlooked a bit this point... So, I have now made a .zip file hopefully containing all the material to simulate : [Blender_Crash.zip](https://archive.blender.org/developer/F314727/Blender_Crash.zip) As in previous posts, with 2.77a (or even latest build), making any change to the file and un-doing it (CTRL-Z or via "history") cause Blender to unexpectedly close. This phenomenon do not appear with 2.76b. This has also apparently nothing to do with an OpenGL issue. Thanks a lot for your help and support, Bernard

Don't really have time right now to investigate, but thanks for additional information. We'll check it shortly!

Don't really have time right now to investigate, but thanks for additional information. We'll check it shortly!

Ok Sergey,

Let me know if I could be of further help anyway.

Thanks for your time and efforts.

BRGDS,

Bernard

Ok Sergey, Let me know if I could be of further help anyway. Thanks for your time and efforts. BRGDS, Bernard

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42

Was looking into this bugs, seems it's caused by create_placeholder in readfile.c

This creates a place-holder on file read, however its lost on undo, (seems like this is caused by the library data being reloaded but not the placeholder).
Which is freed from setup_app_data, but kept in the .

Looking into some possible fixes (either create new placeholders, or move them out of Main so they're not freed).

@mont29, any insights here?

Was looking into this bugs, seems it's caused by `create_placeholder` in readfile.c This creates a place-holder on file read, however its lost on undo, *(seems like this is caused by the library data being reloaded but not the placeholder)*. Which is freed from `setup_app_data`, but kept in the . Looking into some possible fixes (either create new placeholders, or move them out of Main so they're not freed). @mont29, any insights here?

This fixes the bug, but seems a bit hackish - P365

This fixes the bug, but seems a bit hackish - [P365](https://archive.blender.org/developer/P365.txt)
Bastien Montagne self-assigned this 2016-06-06 17:49:23 +02:00

I’m not convinced missing libs (i.e. placeholders) are the issue here actually… I see no reason to have different behavior here with indirect placeholders than with 'real' indirect datablocks - in both cases, those ID_ID are not written in .blend, which means they are supposed to be re-linked on read time, have the feeling this is true for any kind of indirect ID.

So, question @beti001: do you have missing libraries in your own local setup, when you get the undo crash?

I’m trying to recreate that issue with a simpler setup, e.g. a single (missing/placeholder) indirectly linked material does not make things crash here.

I’m not convinced missing libs (i.e. placeholders) are the issue here actually… I see no reason to have different behavior here with indirect placeholders than with 'real' indirect datablocks - in both cases, those ID_ID are **not** written in .blend, which means they are supposed to be re-linked on read time, have the feeling this is true for any kind of indirect ID. So, question @beti001: do you have missing libraries in your own local setup, when you get the undo crash? I’m trying to recreate that issue with a simpler setup, e.g. a single (missing/placeholder) indirectly linked material does not make things crash here.

Hello Bastien, Campbell,

To answer your question: not that I'm aware of (meaning I have checked everything to the best of my knowledge).

Everything links correctly, even multi-dependencies objects (e.g. the camera - the illustrated object - is made up of multiple parts which are located in the "G3_Parts" folder).

My local setup is exactly similar to the one I have enclosed fro reference (Blender_Crash.zip).

What I was thinking of doing is to "depopulate" the scene from its objects one by one up to a point where - hopefully - the problem doesn't appear anaymore... Is it worth a try ?

Let me know If I get your point wrong or if I messed up with something.

Looking forward to hearing from you guys, and anyway : fantastic job !!!

BRGDS,

Bernard

Hello Bastien, Campbell, To answer your question: not that I'm aware of (meaning I have checked everything to the best of my knowledge). Everything links correctly, even multi-dependencies objects (e.g. the camera - the illustrated object - is made up of multiple parts which are located in the "G3_Parts" folder). My local setup is exactly similar to the one I have enclosed fro reference (Blender_Crash.zip). What I was thinking of doing is to "depopulate" the scene from its objects one by one up to a point where - hopefully - the problem doesn't appear anaymore... Is it worth a try ? Let me know If I get your point wrong or if I messed up with something. Looking forward to hearing from you guys, and anyway : fantastic job !!! BRGDS, Bernard

@beti001 we are missing a lot of libraries in given .zip (or I should rather say, paths of indirect libraries are stored absolute in direct libs, which means we cannot access them, not without editing all lib's path to make them relative…).

Anyway, think this confirms issue is not with placeholders (missing linked data), but with undo & multi-level linking, but this is not triggered in all cases, I tried to reproduce this with some simple setup, with no luck so far.

So yes, removing everything and adding it back until you can reproduce the issue is a very good next step in investigation. :)

@beti001 we are missing a lot of libraries in given .zip (or I should rather say, paths of indirect libraries are stored absolute in direct libs, which means we cannot access them, not without editing all lib's path to make them relative…). Anyway, think this confirms issue is not with placeholders (missing linked data), but with undo & multi-level linking, but this is not triggered in all cases, I tried to reproduce this with some simple setup, with no luck so far. So yes, removing everything and adding it back until you can reproduce the issue is a very good next step in investigation. :)
Bastien Montagne changed title from Blender 2.77a unexpectedly close after CTRL-Z to Blender 2.77a crashes on Undo in some specific multi-level linked libraries cases 2016-06-07 19:57:28 +02:00

Hello Bastien,

I'll further investigate and hopefully provide you with a much simpler setup to test with.

Up until know, I could indeed isolate the object that causes Blender to crash.
This might have indeed something to do with the multi-level linking as this object has multiple dependencies but which all seem beeing correctly resolved.

I keep you posted anyway.

BRGDS,

Bernard

Hello Bastien, I'll further investigate and hopefully provide you with a much simpler setup to test with. Up until know, I could indeed isolate the object that causes Blender to crash. This might have indeed something to do with the multi-level linking as this object has multiple dependencies but which all seem beeing correctly resolved. I keep you posted anyway. BRGDS, Bernard

Hello Bastien (& other followers),

Sorry, but it took me some time to nail down the issue in a simplified set-up.

Please find herewith a file that would allow you to reproduce the problem : Blender_Crash_Exemple.zip

In short, it goes over linking a group of linked objects (themselves being a group of object).
Maybe a bit hard to explain but the file exemple is pretty straightforward.

Hope it helps,

Bernard

Hello Bastien (& other followers), Sorry, but it took me some time to nail down the issue in a simplified set-up. Please find herewith a file that would allow you to reproduce the problem : [Blender_Crash_Exemple.zip](https://archive.blender.org/developer/F317303/Blender_Crash_Exemple.zip) In short, it goes over linking a group of linked objects (themselves being a group of object). Maybe a bit hard to explain but the file exemple is pretty straightforward. Hope it helps, Bernard

Hey @beti001, thanks for the file, but it’s not crashing at all here, tried several actions & multiple undo, nothing wrong :|

Hey @beti001, thanks for the file, but it’s not crashing at all here, tried several actions & multiple undo, nothing wrong :|

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I can recreate the crash on AMD X3 455, r7 360, loaded factory settings:

Opening _Linked_Component, moving it it and then making an undo will crash Blender.
Sometimes two objects disappear after the first undo and after the next one there is a crash.

Win 7:

Blender versions:
hash: 049f715, e0db647, b567835, 6d3fdcc

The cmd doesn't say much:

ED_undo_push: Translate
undo Translate
Error: EXCEPTION_ACCESS_VIOLATION

Linux:
Xubuntu 15.10
Blender version: a58a8eb

The terminal
Segmentation fault (core dumped)

However, here is the crash dump:

_Linked_Component_crash.txt

I can recreate the crash on AMD X3 455, r7 360, loaded factory settings: Opening _Linked_Component, moving it it and then making an undo will crash Blender. Sometimes two objects disappear after the first undo and after the next one there is a crash. Win 7: Blender versions: hash: 049f715, e0db647, b567835, 6d3fdcc The cmd doesn't say much: ED_undo_push: Translate undo Translate Error: EXCEPTION_ACCESS_VIOLATION Linux: Xubuntu 15.10 Blender version: a58a8eb The terminal Segmentation fault (core dumped) However, here is the crash dump: [_Linked_Component_crash.txt](https://archive.blender.org/developer/F317322/_Linked_Component_crash.txt)

Hi, this is Estefania, the person who reported the bug. I would like to clarify that my crash happened with 2.76b. I was not aware 2.77a version existed when it happened.
I am sorry I did not clarify it earlier, but I am not an engineer/computer scientist so I was a little intimidated by the email updates and I did not notice the report had been titled: Blender 2.77a crashes ... Anyway, I suppose you might not be able to crash 2.77a with multiple Undo commands if the bug happened in 2.76b.
Sorry for the misunderstanding. I have learned to read the reports and to log in here to look up for "my" case to offer my thoughts. Hope I will be more useful in the future.
Best regards.

Hi, this is Estefania, the person who reported the bug. I would like to clarify that my crash happened with 2.76b. I was not aware 2.77a version existed when it happened. I am sorry I did not clarify it earlier, but I am not an engineer/computer scientist so I was a little intimidated by the email updates and I did not notice the report had been titled: Blender 2.77a crashes ... Anyway, I suppose you might not be able to crash 2.77a with multiple Undo commands if the bug happened in 2.76b. Sorry for the misunderstanding. I have learned to read the reports and to log in here to look up for "my" case to offer my thoughts. Hope I will be more useful in the future. Best regards.

@mont29 Hello Bastien, my mistake not having given any indication about how to reproduce the issue with the simplified setup. Entry point is indeed the _Linked_component file which just contains a link to a group made up of two other linked groups (still difficult to formulate indeed). Undoing any cmd lke e.g. move or rotate is just crashing Blender 2.77a while this behaviour doen't happen with 2.76b.
This particular phenomenon was indeed well described by @Vuk Gardašević (lijenstina), thanks for this.
Hope you will be able to reproduce.

To @estefania, thanks for your feedback and comment which are of course welcome. Just one point that I noticed though is that - at least as far as I could test - the specific problem that I reported is not appearing with 2.76b.
So I'm just wondering if the root cause of your issue would be exactly the same as the one reported here (although software bugs may sometimes lead to strange side effects).

Looking forward to your inputs,

BRGDS,

Bernard

@mont29 Hello Bastien, my mistake not having given any indication about how to reproduce the issue with the simplified setup. Entry point is indeed the _Linked_component file which just contains a link to a group made up of two other linked groups (still difficult to formulate indeed). Undoing any cmd lke e.g. move or rotate is just crashing Blender 2.77a while this behaviour doen't happen with 2.76b. This particular phenomenon was indeed well described by @Vuk Gardašević (lijenstina), thanks for this. Hope you will be able to reproduce. To @estefania, thanks for your feedback and comment which are of course welcome. Just one point that I noticed though is that - at least as far as I could test - the specific problem that I reported is not appearing with 2.76b. So I'm just wondering if the root cause of your issue would be exactly the same as the one reported here (although software bugs may sometimes lead to strange side effects). Looking forward to your inputs, BRGDS, Bernard

Ah yes, now can reproduce indeed. Thanks, will try to investigate this one next week…

Ah yes, now can reproduce indeed. Thanks, will try to investigate this one next week…

Added subscriber: @fsiddi

Added subscriber: @fsiddi

This issue was referenced by e34ade4eb3

This issue was referenced by e34ade4eb3b28a44d7bb1685a0fba32937c8982f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Well done Bastien !
I will give a try. Is your fix going to be available through the next night build ?

Thanks a lot for your efforts & involvement. Errors are only made by those who dare to act and make things moving... ; -)

Bernard

Well done Bastien ! I will give a try. Is your fix going to be available through the next night build ? Thanks a lot for your efforts & involvement. Errors are only made by those who dare to act and make things moving... ; -) Bernard
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

@beti001 Yes

@beti001 Yes

@Blendify Thanks Aaron.

@Blendify Thanks Aaron.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48412
No description provided.