Fix T48412: Blender 2.77a crashes on Undo in some specific multi-level linked libraries cases.

Good old dead-brain stupid error when iterating over a linked list from which you remove some items...