source/blender/blenloader/intern/readblenentry.c
@@ -411,11 +411,12 @@ BlendFileData *BLO_read_from_memfile(Main *oldmain, const char *filename, MemFil
 			/* Even though directly used libs have been already moved to new main, indirect ones have not.
 			 * This is a bit annoying, but we have no choice but to keep them all for now - means some now unused
 			 * data may remain in memory, but think we'll have to live with it. */
-			Main *libmain;
+			Main *libmain, *libmain_next;
 			Main *newmain = bfd->main;
 			ListBase new_mainlist = {newmain, newmain};
 
-			for (libmain = oldmain->next; libmain; libmain = libmain->next) {
+			for (libmain = oldmain->next; libmain; libmain = libmain_next) {
+				libmain_next = libmain->next;
 				/* Note that LIB_INDIRECT does not work with libraries themselves, so we use non-NULL parent
 				 * to detect indirect-linked ones... */
 				if (libmain->curlib && (libmain->curlib->parent != NULL)) {
